<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00555555"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_15sdp">


    <LinearLayout
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/corner_shape"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/str_alert"
                android:textAlignment="center"
                android:textColor="@color/red_A700"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/str_server_error"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_install"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.45"
                    android:background="@drawable/corner_shape"
                    android:backgroundTint="#6AD600"
                    android:gravity="center"
                    android:text="@string/str_install"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="0.1" />

                <TextView
                    android:id="@+id/txt_do_it_latter"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.45"
                    android:background="@drawable/corner_shape"
                    android:backgroundTint="#DB6A59"
                    android:gravity="center"
                    android:text="@string/str_do_it_later"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <ImageView
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_error"
        app:layout_anchor="@id/dialog"
        app:layout_anchorGravity="center_horizontal" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>