<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.mediaPlayer.link.ui.activity.MovieViewActivity">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/Toolbar.Light">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image"
            android:padding="10dip"
            app:srcCompat="@drawable/ic_arrow_back" />


        <TextView
            android:id="@+id/txt_tool_movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_movie_name"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/saffron"
            android:textSize="15sp"
            app:fontFamily="sans-serif-black"
            tools:ignore="RelativeOverlap" />


        <ImageView
            android:id="@+id/img_share"
            android:layout_width="27dp"
            android:layout_height="21dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:backgroundTint="@color/main_color"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/share_normal"
            app:tint="@color/white" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/myCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="#061939"
        android:fitsSystemWindows="true"
        android:orientation="vertical">


        <!--        android:alpha="0.3"-->


        <androidx.core.widget.NestedScrollView
            android:id="@+id/item_detail_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:scrollingCache="true"
            android:visibility="visible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/image_movie_poster"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200sdp"
                        android:background="@drawable/corner_shape"
                        android:contentDescription="@string/image"
                        android:fitsSystemWindows="true"
                        android:scaleType="fitXY"
                        app:cardBackgroundColor="@android:color/transparent"
                        tools:src="@drawable/ic_poster_demo" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/text_movie_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="@string/movie_original_label"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textColor="@color/grey_11"
                            android:textSize="20sp"
                            app:fontFamily="sans-serif-black" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="start"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/txt_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/str_10_22_55"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textColor="@color/bg_item_normal_state"
                            android:textSize="11sp" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="3dp"
                            android:background="@color/light_gray"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:textSize="20sp"
                            app:fontFamily="sans-serif-black" />

                        <TextView
                            android:id="@+id/txt_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:gravity="center"
                            android:paddingBottom="4dp"
                            android:text="@string/str_language"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textColor="@color/bg_item_normal_state"
                            android:textSize="11sp" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="3dp"
                            android:background="@color/light_gray"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:textSize="20sp"
                            app:fontFamily="sans-serif-black" />

                        <TextView
                            android:id="@+id/txt_genres"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_marginEnd="10dp"
                            android:gravity="center"
                            android:paddingBottom="4dp"
                            android:text="@string/genre"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textColor="@color/bg_item_normal_pressed_state"
                            android:textSize="11sp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">


                        <androidx.appcompat.widget.AppCompatRatingBar
                            android:id="@+id/rating_bar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="18dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="5dp"
                            android:numStars="5"
                            android:rating="4.0"
                            android:stepSize="0.1"
                            android:theme="@style/RatingBar" />

                        <TextView
                            android:id="@+id/view_movie_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="18dp"
                            android:layout_marginEnd="5dp"
                            android:alpha="0.9"
                            android:background="@drawable/view_bg"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:lineSpacingExtra="1dp"
                            android:paddingStart="7dp"
                            android:paddingEnd="7dp"
                            android:text="@string/movie_rating"
                            android:textColor="#fff0f1f5"
                            android:textSize="11sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:gravity="center"
                            android:text="Watch Now "
                            android:textColor="@color/main"
                            android:textSize="20dp"
                            app:fontFamily="sans-serif-black" />

                        <TextView
                            android:id="@+id/txt_episode_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:gravity="center"
                            android:text="@string/str_10_22_55"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            app:fontFamily="sans-serif-black" />


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/RecycleViewTrailerLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="40dp"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:background="@drawable/button_bg"
                            android:gravity="center">


                            <TextView
                                android:id="@+id/button_play"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="@dimen/_15sdp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/str_play"
                                android:textColor="@color/black"
                                android:textSize="15dp"
                                app:fontFamily="sans-serif-black" />

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_baseline_play_circle_outline_24" />

                        </LinearLayout>

                        <!--                        <Button-->
                        <!--                            android:id="@+id/button_play"-->
                        <!--                            android:layout_width="match_parent"-->
                        <!--                            android:layout_height="wrap_content"-->
                        <!--                            android:layout_marginBottom="@dimen/_10sdp"-->
                        <!--                            android:background="@drawable/btn_gradient"-->
                        <!--                            android:backgroundTint="@color/sun_glow"-->
                        <!--                            android:text="@string/str_play"-->
                        <!--                            android:textAllCaps="true"-->
                        <!--                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"-->
                        <!--                            android:textColor="@color/black"-->
                        <!--                            android:textSize="14sp"-->
                        <!--                            app:fontFamily="sans-serif-black" />-->

                    </LinearLayout>


                    <FrameLayout
                        android:id="@+id/maxNativeAds"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="20dp" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/str_screen_shot"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/grey_11"
                    android:textSize="16sp"
                    app:fontFamily="sans-serif-black" />


                <ImageView
                    android:id="@+id/img_screen_shot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:contentDescription="@string/image"
                    android:scaleType="fitXY"
                    tools:src="@drawable/ic_poster_demo" />


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </LinearLayout>


</RelativeLayout>


